started front end

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import '~bootstrap/scss/bootstrap.scss';
+@import '~bootstrap/dist/css/bootstrap.min.css';
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 *{
